--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: ruby
+cache: bundler
 sudo: required
-rvm: 2.4
-cache: false
+dist: trusty
+
+rvm:
+  - 2.4.2
+
 addons:
   chrome: stable
-before_install:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 script:
   - bundle exec jekyll build
   - bundle exec rake wax:test
