--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ addons:
   chrome: stable
 script:
   - bundle exec jekyll build
-  - bundle exec rake wax:test
+  - bundle exec rspec
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-
